--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,41 @@
-/* Move your styles here when you're ready to clean up your HTML file */
-/* Don't forget to link to this file in your HTML, otherwise your styles won't show up! */
+body {font-size: 12px;
+background-color: blue;
+}
+
+h1, h2 {font-family: sans-serif;
+
+}
+header {border-bottom: 12px solid red;
+}
+
+.class-list {list-style-type: square;
+}
+
+.item {border: 5 px;
+
+}
+
+.even {background-color: grey;
+}
+.odd {background-color: black;
+color: white;
+}
+
+#item1 {font-size: 30px;
+}
+
+#item2 {text-align: right;
+}
+
+ol >li {padding-top: 5px;
+  background-color: grey;
+
+}
+
+ol > li>ul > li :hover{background-color: yellow;}
+
+li:nth-child(odd) {background-color: green;}
+
+[title=Bitmaker]:hover{
+    text-decoration: none;
+}
